crates/opi-tui/tests/snapshots/permission_prompt_snapshots__permission_prompt_external_120x40.snap
---
source: crates/opi-tui/tests/permission_prompt_snapshots.rs
assertion_line: 51
expression: "render(p, 120, 40)"
---
┌ Allow opi-sandbox? ──────────────────────────────────────────────────────────────────────────────────────────────────┐
│adapter: opi-sandbox                                                                                                  │
│package: mock-pkg · mode: interactive                                                                                 │
│Esc cancels (= deny).                                                                                                 │
│                                                                                                                      │
│> Allow once                                                                                                          │
│  Allow for session                                                                                                   │
│  Deny                                                                                                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
