crates/opi-tui/tests/snapshots/permission_prompt_snapshots__permission_prompt_local_no_package_120x40.snap
---
source: crates/opi-tui/tests/permission_prompt_snapshots.rs
assertion_line: 76
expression: "render(p, 120, 40)"
---
┌ Allow local? ────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│adapter: local                                                                                                        │
│mode: interactive                                                                                                     │
│Esc cancels (= deny).                                                                                                 │
│                                                                                                                      │
│> Allow once                                                                                                          │
│  Allow for session                                                                                                   │
│  Deny                                                                                                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
