crates/opi-tui/tests/snapshots/permission_prompt_snapshots__permission_prompt_local_no_package_80x24.snap
---
source: crates/opi-tui/tests/permission_prompt_snapshots.rs
assertion_line: 62
expression: "render(p, 80, 24)"
---
┌ Allow local? ────────────────────────────────────────────────────────────────┐
│adapter: local                                                                │
│mode: interactive                                                             │
│Esc cancels (= deny).                                                         │
│                                                                              │
│> Allow once                                                                  │
│  Allow for session                                                           │
│  Deny                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
